[package]
name = "pbgui-vpin"
version = "0.3.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.31.1"}
qt_thread_conductor = {git= "https://github.com/jlgerber/rust-qt-conductor", tag="v0.3.0"}
rustqt-utils = {git = "https://github.com/jlgerber/rustqt-utils", tag="v0.4.0"}
qt_core = "~0.4.1"
qt_gui = "~0.4.1"
qt_widgets = "~0.4.1"
qt_ui_tools = "~0.4.1"